--- a/_posts/2022-08-08-OS_CSAP.md
+++ b/_posts/2022-08-08-OS_CSAP.md
@@ -277,26 +277,95 @@ likely predictors are quite distinct from the other characteristics in how one s
 
 ### Literature-Level Reproduction Performance
 
+#### Success of Predictor Reproductions
+
 * Figure2
+> 我们评估 reproduction success 来自于一个简单的
+> 指标：<font color=red>long-short raw return t-stat 是否大于 1.96</font>.
+> 这一指标是 [Hou Xue and zhang]() 文章中主要使用的观测方法，
+> 提供了一种对 reproduction success 简单的易于理解的测量方法。
+> 图2 显示了 t-stat > 1.96 的 “clear predictors” 所占的份额
+> data 分类为 accouting, analyst forecasts, corporate events, stock prices, trading data. 
 > ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/OS_CSAP_Figure2.jpg)
->
->
->
+> 图2显示了我们的 reproduction对 “clear predictors” 是非常成功的
 
 
 * Figure3
+> 有人可能会担心，我们极高的 reproduction success rate 会对我们如何定义 “clear predictor” 非常敏感。
+> 类似的，人们可能会担心，即使我们复现得到的 t-stat > 2.0 , 但是其实在原始论文中比 2.0 小得多。<font color=red>图三的结果
+> 可以解决这两种担忧</font>,通过简单地绘制 reproduced t-stats与原始论文的t-stats.
 > ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/OS_CSAP_Figure3.jpg)
->
->
->
->
-
+> * 图3 说明了我们极高的 reproduction success rate 对 predictor categorizations 不敏感
+> * 与原始论文一致，我们的reproduction 也会产生接近2.0的t-stats，
+尽管其中大约一半低于任意的1.96阈值。更广泛地说，我们对于"clear predictors"的极高成功率
+并不是由于t-stats刚刚超过2.0。许多重复的t-stat超过5.0，少数甚至超过10.0。
+> * 也许最重要的是，图3显示，我们的reproduction与原始结果不仅在定性上匹配，而且在定量上匹配
+> * 在原始t-stats上回归我们的reproduction t-stat产生的系数为0.90，离理想斜率1.0不远。R2为83%，
+这意味着reproduction不会偏离原始值太远。<font color=red>事实上，
+剩下的大部分 deviations 可能是由于我们的t-stats使用 simple raw mean long-short returns (简单的原始平均长-短回报率)，
+而许多原始论文中的t-stat 根据特征或 factor exposures (因子暴露) 进行调整 </font>。
+> * 作为横截面文献 reproduction 的最终证明，
+我们<font color=red>检验了预测因子的平均收益率是否单调</font>。
+根据我们的经验，显示投资组合排序的绝大多数论文也显示出单调性，尽管我们没有手工收集这些信息。
 
 * Figure4
+> 有趣的是，<font color=red>图4还提供了反对p-hacking可预测性解释的证据</font>。
+> 对于 p-hacking 解释可预测性，p-hacking必须在整个预测分布范围内操作，
+> 从一个 level of the predictor 到下一个水平<font color=red>递增平均回报.
+> 这种微调是一个在以往模拟p-hacking的研究中没有研究过的问题</font>。
+>（[Harvey Liu and Zhu (2016)](https://doi.org/10.1093/rfs/hhv059); 
+> [Chen and Zimmermann (2020)](https://doi.org/10.1093/rapstu/raz011);
+> [chen 2020](https://doi.org/10.1111/jofi.13036) ），
+> [Hou Xue Zhang (2020)](https://doi.org/10.1093/rfs/hhy131) 也没有检验过 p-hacking 问题。
 > ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/OS_CSAP_Figure4.jpg)
+> 
+> 这就是我们的主要结果。几乎100%关于股票收益率可预测性的文献都可以复制。
+这一发现不仅意味着文献的真实性，而且更普遍地捍卫了资产定价界的可信度。
+
+#### Not-Predictors, Indirect Signals, and Comparison with Other Meta-Studies
+
+* ! 
+> 我们 reproduction 的巨大成功似乎与文献不符。
+ [McLean和Pontiff（2016）（MP）](https://doi.org/10.1111/jofi.12365) 发现，<font color=red>他们的
+ 97个预测因子中有12%产生t-stats<1.5，表明“失败率”远高于我们的主要结果</font>。更引人注目的是，
+ [Hou、Xue和Zhang（2020）（HXZ）](https://doi.org/10.1093/rfs/hhy131) 发现，他们的452个long-short 投资组合中
+ 约有50%产生的t-stats绝对值小于1.96，即使权重相等，且仅限于原始论文的样本期。
 >
+>我们的结果与[McLean Pontiff（2016）（MP）](https://doi.org/10.1111/jofi.12365) 和
+ [Hou、Xue Zhang（2020）（HXZ）](https://doi.org/10.1093/rfs/hhy131) 不同，
+ 主要是因为我们仔细检查了原始论文，<font color=red>在判断 reproduced long-short t-stats 是否应该超过 1.96 这一问题上，
+ 我们仔细检查了阈值的适用情况，也就是阈值 1.96 是否适用于当前的 predictors</font>.
+ 相比之下，[McLean Pontiff（2016）（MP）](https://doi.org/10.1111/jofi.12365) 
+ 有一个更宽松的标准，<font color=red>仅限于“在5%的水平上拒绝零回报可预测性”的论文。
+ HXZ更宽松。HXZ表示，他们的“清单包含了大部分已发表的财务和会计 异象文献”，
+ 但没有具体说明我们可以确定的更多纳入要求</font>。
+
+* Figure5 
+> 我们的仔细检查如图5所示，图5显示了<font color=red>所有特征（包括“Not-predictor”和“Indirect Signals”类别中的特征）
+> 的再现t统计量的抖动图</font>。
+> 前两行回应了图2和图3的结果：“Clear Predictors”几乎一致地具有t-stats>1.96，并且许多t-stat要大得多。
+> "Likely Predictors"预测值大致均匀地分布在1.96左右。
+> 值得注意的是，这些数据中包括了基于regression 和event study 验证了的 Predictors，因此涵盖的 "Likely Predictors" 远高于图3。
+> ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/OS_CSAP_Figure5.jpg)
+> * 与"Clear Predictors"和 "Likely Predictors" 因子不同，
+ "Not Predictors"和 "Indirect Predictors" 通常无法在我们的 reproduction 中达到统计学意义。
+大量 "Indirect Predictors" 位于t-stat=1.6的左侧，几乎所有"Not Predictors"都位于同一区域。
+
+* Figure6
+> 图6显示了类似图5的图，仅限于同样出现在[McLean Pontiff（2016）（MP）](https://doi.org/10.1111/jofi.12365) 
+>（顶部Panel）或[Hou、Xue Zhang（2020）（HXZ）](https://doi.org/10.1093/rfs/hhy131) （底部Panel）中的预测值。
+>![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/OS_CSAP_Figure6.jpg)
+> * 顶部面板与 [McLean Pontiff（2016）（MP）](https://doi.org/10.1111/jofi.12365) 的发现相呼应，
+即约12%的预测值具有较小的t-stats。我们的85个特征中有14个与MP重叠，其t-stats<1.96（虚线）。
+> * 我们将其中的大多数判断为 "Likely predictor" factor，少数判断为"Indirect signal"，一个判断为"Not Predictor"。
+> * 特别是，我们将 Dichev（1998）的Z-score 判断为"Not Predictor"，因为它在
+ univariate regression (单变量回归)中发现t-stat为1.59（见Dichev的表3A）。
+> * 然而 [McLean Pontiff（2016）（MP）](https://doi.org/10.1111/jofi.12365) <font color=red>
+ 很可能包括了 Z-score, 因为其在具有size 和B/M对照的多元回归中t-stat为3.37</font>。
+> * 然而，我们认为，<font color= red>我们 reproduced Z-score 的 t-stat 为 1.20 不应被判断为再现失败，
+ 因为它与Dichev的 univariate regression （单变量回归）结果非常一致</font>。
 >
->
->
+
+
 
 ### Characteristic-Level Reproduction Performance
