--- a/_posts/2022-08-08-OS_CSAP.md
+++ b/_posts/2022-08-08-OS_CSAP.md
@@ -364,8 +364,44 @@ likely predictors are quite distinct from the other characteristics in how one s
  很可能包括了 Z-score, 因为其在具有size 和B/M对照的多元回归中t-stat为3.37</font>。
 > * 然而，我们认为，<font color= red>我们 reproduced Z-score 的 t-stat 为 1.20 不应被判断为再现失败，
  因为它与Dichev的 univariate regression （单变量回归）结果非常一致</font>。
->
+> * 图6的底部面板显示了与[Hou、Xue Zhang（2020）（HXZ）](https://doi.org/10.1093/rfs/hhy131) 重叠的predictors。
+数据看起来与我们的完整数据集非常相似(图5): "clear predictors"几乎完全高于1.96，
+"Likely predictors"集中在1.96左右，而不是低于1.96的预测值，"Indirect Signals"分散，
+但大部分信号低于1.1996。<font color=red>因此，[Hou、Xue Zhang（2020）（HXZ）](https://doi.org/10.1093/rfs/hhy131) 
+大约50%的故障率似乎是由于 abnormal (“异象”) 的错误分类</font>。
+> * 在我们的reproduction中，几乎所有明显的失败都与这些 predictability 没有被证实的研究论文有关
+> * 重要的是，[McLean Pontiff（2016）（MP）](https://doi.org/10.1111/jofi.12365) 
+选择在确定原始研究 predictability 时更为宽松，这对于他们的研究目标是完全有效的。 MP试图测量
+样本外可预测性的下降幅度，对于未达到1.96临界值的 predictor，人们可能会对这种下降感兴趣。
 
-
+* Figure7
+> 事实上，我们发现，即使我们限制了我们的研究只在 “clear predictors” 的样本上，
+> 我们也可以密切reproduce [McLean Pontiff（2016）（MP）](https://doi.org/10.1111/jofi.12365) 的结果。
+> 这种稳健性如图7所示，它仅使用“clear predictors” 复制了图1（MP）的结果。<font color=red>
+> 顶部面板绘制in-sample return（样本内收益）与post-publication（发布后收益）衰减的关系，
+> 底部面板为 in-sample t-stat return </font>。在这两个面板中，我们将数据子集化，
+> 以区分 MP（暗圈）中的“clear predictor”，不存在 MP（亮三角形）中的" clear predictor"。
+>![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/OS_CSAP_Figure7.jpg)
+> * 该图证实了关于 post-publication decay 的三个重要事实：<font color=red>
+(1) decay increase in the in-sample return (2) decay increases in the in-sample t-stat
+(3) the decay is not large enough to wipe out the in-sample return. </font>
+> * (1) decay increase in the in-sample return 可以由图中回归线向上的斜率看出。
+> * (2) decay increases in the in-sample t-stat 可以由图中回归线向上的斜率看出。
+> *  !!!  值得注意的是斜率向上还是向下并不取决于 whether we fit the regression to 
+predictors that are studied by MP (solid) or missing from MP (dashed)
+> * !!! 事实上两个标准差 bands overlap 的非常多，这说明 MP 的发现在 out-of-sample test 中也会
+定量的成立 ( hold quantitatively) 。
+> * (3) the decay is not large enough to wipe out the in-sample return 可以通过比较 predictor 
+markers 和 45 degree dotted line 比较来看出来。如果 post-publication decay 足够强能够 wipe out
+in-sample returns, then the predictors would be evenly distributed around this 45 degree line. 
+However, the majority of predictors lie above the 45 degree line, showing that 
+predictability survives post-publication. </font> 值得注意的是这里没有考虑交易费用<font>
+(It is important to note, however, that these results do not account for trading costs).
+> * 总的来说，我们的结果似乎与其他研究不同，因为我们<font color=red>根据原始结果
+仔细分类预测因子。只有通过这种谨慎的分类，meta-reserach 才能准确评估reproduction
+在如此大规模上是否成功</font>。
+这些分类不影响[McLean和Pontiff（2016）](https://doi.org/10.1111/jofi.12365) 分析，
+事实上，我们在具有更高标准的“predictors”中reproduced了他们的结果。
+> * 
 
 ### Characteristic-Level Reproduction Performance
