--- a/_posts/2022-08-08-OS_CSAP.md
+++ b/_posts/2022-08-08-OS_CSAP.md
@@ -405,3 +405,36 @@ predictability survives post-publication. </font> 值得注意的是这里没有
 > * 
 
 ### Characteristic-Level Reproduction Performance
+
+> 在文献层面的结果背后是319个企业层面的特征，每个特征都有自己的故事，
+> 原始统计数据，和 reproduction quality (复现质量). 
+> Tables 2-4 探讨了这一丰富的数据，列出了每个个体特征，reproduced mean return (复现的平均收益率)，
+> t-stat, 以及原始论文中 evidence for predictability (可预测性证据)
+> Table2 -> 'Clear Predictors'; Table3 -> 'Likely Predictors'; 
+> Table4 -> 'Not Predictors and Indirect signals'
+
+#### Which Predictors Are "Clear", "Likely", or "Not"? Which are "Indirect Signals"
+
+* Categorization Details for Clear and Likely Predictors
+> * “Clear Predictors”: Most clear predictors produced t-stats that > 2.5 in long-short portfolio 
+in the original papers (出现在原始论文中的 clear predictors)
+> * "Clear Predictors": 除掉在原始论文中出现 clear predictors，剩余的 clear predictors 大部分产生的 t-stats > 4
+> * "Likely Predictors ": 大多数的 “Likely Predictors” 在原始文献中的 t-stat 是微不足道的。
+其余的 “Likely Predictors” 的 predictability 是模糊的。[Amihud and Mendelson (1986)]
+bid-ask spread predictor showed <font color=red>strong portfolio sorts</font>, but
+the original paper did not provide a long-short t-stat.
+(<font color=red>之前研究的一些文献，尽管给出了 strong portfolio sorts 但是没有给出 t-stats 值</font>).
+> * [Huagen and Baker (1996)] 文章中给出了一些predictors 基于 180 个不同的多元回归的 t-stat 值。
+但是这很难说明是否会在 long-short portfolios 中产生大于 2 的 t-stats
+
+* Categorization of Not-Predictors and Indirect Signals
+> * 大多数的 “Not-Predictors” 的 t-stats < 1.96 in long-short portfolio in the original studies
+[Ang, Chen, and Xing's(2006) past downside beta; Anderson, Ghysels, and Juergens's(2005) 
+long-term forecast dispersion; Whited and Wu's(2006) financial constraints index]. 
+值得一提的是，这种意义的缺失不应被视为对原始论文的批评。5%的显著性临界值是任意的，
+其中一些预测值刚好低于临界值。
+> * Indirect Signals: 许多“Indrect Signals”在最初的论文中根本没有可预测性证据。
+权责发生制质量、收益稳健性和收益价值相关性都来自Francis等人（2004年），
+他们研究与基于价值线价格目标的隐含资本成本估计相关的特征 
+> * 其他"Indirect signal"来自原始论文中与可预测性相关的信息，
+但我们认为这一证据太弱，无法判断投资组合类别的统计显著可预测性 
