--- a/_posts/2022-08-08-OS_CSAP.md
+++ b/_posts/2022-08-08-OS_CSAP.md
@@ -438,4 +438,153 @@ long-term forecast dispersion; Whited and Wu's(2006) financial constraints index
 权责发生制质量、收益稳健性和收益价值相关性都来自Francis等人（2004年），
 他们研究与基于价值线价格目标的隐含资本成本估计相关的特征 
 > * 其他"Indirect signal"来自原始论文中与可预测性相关的信息，
-但我们认为这一证据太弱，无法判断投资组合类别的统计显著可预测性 
+但我们认为这一证据太弱，无法判断投资组合类别的统计显著可预测性。
+一些 weak evidence 来自于 [Acharya and Pedersen's (2005)] 对 liquidity betas 的研究。
+[Acharya and Pedersen's (2005)] 基于 betas in
+GMM framework 来 estimate market price of risk, 
+基于 GMM framework, if the parameters are very stable, 
+which would imply predictability. <font color=red>由于[Ang, Chen, and Xing 2006] 中的
+betas tend to be unstable, 我们认为这样的 GMM results as close to no evidence 
+regarding the results of portfolio sorts</font>, 
+同样，我们判断[Abarbanell和Bushee（1998年）]
+和[Soliman（2008年）]的 multi-variate regressions (多元回归)
+在回归系数不显著时提供的信息不足 
+(provide insufficient information for our purposes when the coefficient on a 
+regressor is insignificant)
+> * "Indirect signals" 的主体来自于 
+[Hou、Xue Zhang（2020）（HXZ）](https://doi.org/10.1093/rfs/hhy131),
+这些特征我们标记为 “HXZ variant”, 
+大多数小的修改是采用了年报的季度版本(Most of these modifications use quarterly
+versions of annual accounting variables), 
+很少的一些 "Indirect Signals" involve arbitrary lags of the 
+denominator or using alternative factor model adjustments when 
+generating return residuals (当产生残差时，采用可替代的因子模型)
+> * 我们避免对 HXZ variants 进行分类，因为这里面需要一些微妙的判断。
+例如，HXZ's produce a quarterly version of [Whited and Wu (2006)],
+which produced a t-stat of 1.2 in the original paper.<font color=red> It's very hard to 
+say whether a more timely version of this variable
+would lead to statistical significance</font>, <font color=green> Similarly,
+it's hard to say if a quarterly version of an annual accounting-based variable
+will have too much seasonality to be predictive.</font>
+(类似地，很难说基于年度会计的季度变量是否具有太多的季节性而无法预测。)
+The seasonality would depend on the precise details, and we did not 
+want to exercise this much judgment. We decided, therefore, to simply
+label all of HXZ's variants. 
+(<font color=red>季节性将取决于准确的细节，我们不想做这么多判断。
+因此，我们决定简单地将HXZ的所有变量标记为“Indirect Signals”。</font>)
+> * 对表4的检查表明，几乎所有HXZ variants 都证明了原始结果的稳健性 (robustness)。
+[Chan、Lakonishok和Sougiannis（2001）]发现，从研发到销售无法预测回报，
+我们对 HXZ variants 季度版本的 reproduction 也无法达到统计意义。
+同时，我们reproduce了HXZ对[Anderson和Garcia Feijoo（2006年）]capx growth、
+[Ball等人（2016年）] 基于现金的运营盈利能力以及
+[Lakonishok、Shleifer和Vishny（1994年）]的市场现金流的变化，
+这些都具有统计意义，与原始结构一致。
+
+### Reproduction Failures and Struggles
+
+* 概述
+> * 尽管总体上取得了压倒性的成功，
+表2和表3说明了我们的reproduction在少数情况下是如何 struggle 甚至 fail的。
+正如导言中强调的，这些失败不应被视为对原始论文的批评，
+因为在我们数百个reproduction 特征中很可能存在编码错误或 remaining deviations (剩余偏差)。
+> * 在我们"Clear Predictors"中（表2），
+最小的reproduced t-stat是[Cremers和Nair（2005）]（CN）的 takeover vulnerability(收购脆弱性)。
+我们的t-stat只有1.00，平均回报率为每月25个基点，然而最初的论文发现t-stat为每月3.1个基点，alpha为每月90个基点。
+我们的reproduction 使用 raw mean returns (原始平均回报率)，
+而 [Cremers 和 Nair] 使用[Carhart（1997）]的四因子阿尔法，
+所以也许这种 deviation (偏差)是导致结果 difference (差异)的原因。
+然而，我们通常会发现，因子调整的影响相对较小（图3），
+我们也很难reproduc [Cremers 和 Nair ]的 active shareholder predictor (积极股东预测因子)，
+我们将其归类为“Likely predictors”如表3所示，
+我们的reproduction 产生的t-stat为1.02，而原始的t-stat为2.04。
+> * 第二个最小的t-stat来自我们对[科恩、迪瑟和马洛伊（2013）]
+R&D ability(<font color=red>研发能力</font>)的reproduction。
+与原稿的t-stat为2.6相比，我们的reproduction获得了1.50的正t-stat，但不显著。
+[Cohen、Diether和Malloy] 通过对 <font color=red> sales forecasting model</font>
+(销售预测模型)的滚动估计来衡量研发能力，
+该模型 involves several lags of R&D (涉及几次研发滞后)。
+因为研发容易缺失,如果为零值, 我们很可能没有遵循与原始作者完全相同的程序。
+> * "Clear Predictors": 
+在我们"Clear Predictors"中，唯一t-stat<1.96的是
+[Pástor和Stambaugh（2003）] 的流动性β。
+然而，我们reproduced 的t-stat为1.93，仅比任意截止值1.96低一点点，
+与原始CAPM调整后的tstat 2.5相差不远。
+我们应该注意的是，我们的目标只是reproduce [Pastor和Stambaugh]，
+其他reprodcution 论文发现该预测因子对构造细节敏感
+（[李、诺维·马克思和Velikov 2019]；[Pontiff和Singla 2019]）。
+> * 另一个表现不佳的 reproduction 是[Elgers、Lo和Pfeiffer（2001）] 的
+ earnings forecast to price (收益与价格预测)，
+在我们的数据中，该预测的t-stat为2.6，远低于原始的t-stat 5。
+然而，原始的t-stat进行了大小调整，
+本文中的其他表格也显示了其数据中的<font color=red>重大size效应</font>。
+> * 值得一提, 最后一个 struggled "Clear Predictos"来自我们对[Boudoukh等人（2007）]
+的 payout yield portfolio (<font color=red>支付收益率投资组合</font>)的reproduction。
+对于这个Predictor，我们选择了一种微妙的方式来偏离原论文。
+在原始论文的最后，作者提出了一个long-short策略，
+从带有纽约证券交易所断点的tercile排序中产生了3.92的t-stat。
+> * "Likely Predictors": 
+在"Likely Predictors"中（表3），大多数明显的reproduction 失败
+仅仅是由于我们的 reproduction attempts 与原始论文之间的(deviations)偏差。
+[Amihud和Mendelson（1986年）]、[Barber等人（2001年）]和
+[Barry和Brown（1984年）]都使用了我们无法访问的专门数据集（见第2节）。
+我们也没有使用[Abarbanell和Bushee（1998年）]的多元回归，
+[Haugen和Baker（1996年）]使用的180个多元回归的总和，或
+[Frazzini和Pedersen（2014年）]使用的专门投资组合分类。
+> * "Likely Predictors": 在reproduction 困难方面，
+最显著的可能预测因子来自[Frankel和Lee（1998）]。
+本文使用<font color=red>分析师预测和现值模型生成了三种交易策略</font>，并进行了重现。
+我们的reproduction导致t-stats介于0.96和2.01之间，
+尽管原始论文发现总体上有1%的统计显著性。
+然而，这种高度的统计显著性是“通过蒙特卡罗模拟得出的”，
+很难与它们较小的收益利差和较短的15年样本相符。
+事实上，我们发现在他们的样本中，B/M的显著性远低于他们使用RMONTE Carlo检验显示的高显著性。
+简言之，<font color=red>我们将较小的t-stats归因于方法上的偏差，
+而不是reproduction 失败</font>，<font color=green>但理性的人在如何评估这些reproduction上可能存在分歧</font>。 
+
+### Extremely Strong Predictors
+
+* 概述
+> * 图3显示，许多reproduction实现了6.0或更高的t-stats。相应的p值为0.000000002，
+这意味着这些预测值不太可能从无可预测性的空值中获取的。
+事实上，[Chen (Forthcoming)]认为，仅从p-hacking一项，
+预计至少需要400年才能产生这些预测值。
+与这一观点一致，[哈维、刘和朱（2016）]的SMM估计以及
+[Chordia、Goyal和Saretto（2020）]的校准表明，<font color=red>t-stats超过4.0几乎
+可以保证是真正的发现</font>。
+> * 表2更仔细地研究了这些预测因素。<font color=red>几乎所有这些杰出的预测指标都关注会计数据、
+分析师预测或股价</font>。
+换言之，几乎没有一个来自更奇特的数据类别。
+> * 这些杰出的performance是多种多样的。
+其中包括 earnings surprise streaks (收益意外连胜（Loh和Warachka，2012年）)；
+ net external financing (外部融资净额（Bradshaw、Richardson和Sloan，2006年）)、
+Change in recommendation (建议变化（Jegadeesh等人，2004年）)、
+ return seasonality (回报季节性（Heston和Sadka，2008年）)、
+ conglomerate return (企业集团回报（Cohen和Lou，2012年）)、
+ dividend seasonality (股息季节性（Hartzmark和Solomon，2013年）)、
+ employment growth (就业增长（Belo、Lin和Bazdresch，2014年）)、
+ asset growth (资产增长（Cooper、Gulen和Schill，2008年）)，
+ change in taxes (税收变化（Thomas和Zhang，2002年）)，以及
+ enterprise multiple (企业多元化（Loughran和Wellman，2011）)。
+ 这些 predictors 缺乏任何明显的经济联系，这与我们在"clear predictors"中
+ 发现的接近零的中值相关性(near zero median correlation)一致（第5.1节）。
+ 然而，如表2和图3所示，这些预测因子在原始论文中确实具有非常大的t-stats。
+
+### Additional Evidence of Dataset Quality
+
+* 概述：
+> * 本节提供了有关数据集质量的其他结果。
+我们将此分析限制在205个 "Clear Predictors" 和 "Likely Predictors"。
+简而言之，我们将"clear-"和"Likely-"的"predictors"称为“Predictos”。
+我们在这里关注"Predictors"，因为评估"Non-Predictors"和"Indirect Signals"的质量要复杂得多。
+> * 在选择特征时，我们的目标主要是全面覆盖先前的 meta-studies
+元研究。We make no attempt to eliminate predictors due to subjective similarities。
+> * 我们纳入了几个与盈利能力相关的预测因素，
+包括来自[Fama, French（2006）](https://doi.org/10.1016/j.jfineco.2005.09.009) 的 
+Predictor；[Balakrishnan, Bartov, Faurel（2010年）](https://doi.org/10.1016/j.jacceco.2009.12.002) 还有
+[Novy-Marx (2013)](https://doi.org/10.1016/j.jfineco.2013.01.003). <font color=red> 对不同的预测因子持开放态度是必要的，因为
+到目前为止，还没有确定不同预测因子的既定方法。通过包含所有预测因素，
+我们允许我们的代码和数据的未来用户自行确定哪个版本的盈利能力是“正确的”</font>。
+> * 尽管存在这种 potential redundancy(潜在的冗余)，
+但一项简单的分析表明，该数据集是非常高维的。
+图8通过显示相关性的分布来检验这个问题。
+>![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/OS_CSAP_Figure8.jpg)
