--- a/_posts/2022-08-08-OS_CSAP.md
+++ b/_posts/2022-08-08-OS_CSAP.md
@@ -588,3 +588,36 @@ Predictor；[Balakrishnan, Bartov, Faurel（2010年）](https://doi.org/10.1016/
 但一项简单的分析表明，该数据集是非常高维的。
 图8通过显示相关性的分布来检验这个问题。
 >![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/OS_CSAP_Figure8.jpg)
+> * 面板（a）显示了特征水平的相关性。
+它显示了股票水平预测因子（特征）之间的 pairwise ranl correlations (<font color=red>成对秩相关分布</font>)。
+在计算相关性之前，我们对所有预测值进行签名，以便根据原始论文，预测值越高意味着平均回报越高。
+面板显示，预测值水平的成对相关性通常接近于零，
+这表明预测值包含不同的信息。
+这些结果与[Green、Hand和Zhang（2013）]一致，
+他们在39个易于编程的预测因子中发现了接近零的相关性。
+> * 面板（b）显示，这种高维度延伸到投资组合层面。
+它还显示了 distribution (成对相关性的分布)，
+这次使用了一对long-short组合回报。
+与我们所有的long-port预测投资组合一样，
+根据最初的论文，投资组合被sign为具有正平均回报。
+与预测相关性类似，大部分分布的投资组合收益相关性接近于零。
+事实上，绝大多数相关性介于-0.5和+0.5之间。
+> * 面板（c）和（d）检查HML和动量因素是否包含我们的多空投资组合。
+HML和动量因子都来自Ken French的网站，并根据Fama和French（1993）的2×3排序构建。
+> * 面板（c）显示，
+我们的少数投资组合与HML的相关性为0.6或更高，
+但大部分相关性分布仍接近于零。
+图（d）显示了动量因子的类似结果。
+总体而言，我们的多空投资组合包含许多不同的策略，
+这与[McLean和Pontiff（2016）]() 的发现一致，
+即其reproduced回报之间的平均相关性接近零。
+
+### Peformance by Liquidity Adjustment
+
+* 概述：
+>* 遵循我们的“reproduction”理念，我们的基准投资组合尽可能遵循原始论文。
+然而，<font color=red>这些投资组合可能高估了交易者从这些预测中可能获得的利润</font>，
+因为其中大多数都是同等权重的（Green、Hand和Zhang 2013）。<font color=red>等权投资组合需要交易
+非流动性股票和巨大的交易成本（例如，Novy Marx和Velikov 2016）</font>。
+>![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/OS_CSAP_Figure9.jpg)
+> * 
