--- a/_posts/2022-08-11-CSAP.md
+++ b/_posts/2022-08-11-CSAP.md
@@ -36,8 +36,9 @@ Researchers often look to enrich the specification of investors’ preferences
 or the dynamics of risks to enhance the pricing performance of models
 (<font color=red>研究人员通常希望丰富投资者偏好或风险动态的specification，
 以提高模型的定价性能</font>)
-> * Sentiment: Since the boundary between rational theories and sentiment approaches is fuzzy,
- I refrain from using the somewhat simplistic categorization 
+> * Sentiment (<font color=red> 情绪 </font>): 
+Since the boundary between rational theories and sentiment approaches is fuzzy,
+I refrain from using the somewhat simplistic categorization 
 of cross-sectional asset-pricing studies into “rational” and “irrational”, 
 or “behavioral,” approaches. (<font color=red>我用“情绪”这个标签来描述这种预期的形成。
 由于理性理论和情绪方法之间的界限是模糊的，
