--- a/_posts/2022-08-12-HXZ.md
+++ b/_posts/2022-08-12-HXZ.md
@@ -7,13 +7,16 @@ tag: reading notes of financial studying
 
 ### Abstract
 > Notes for reading papers 
-> * [Replicating Anomalies](https://doi.org/10.1093/rfs/hhy131 by Hou Xue Zhang. 
+> * [Replicating Anomalies](https://doi.org/10.1093/rfs/hhy131) by Hou Xue Zhang.  
 > * 
 >
 
 ### Replicating Anomalies
 
 #### 概述
+
+> * Lecture Notes - [Hou, Xue, and Zhang (2020 Review of Financial Studies, 
+"Replicating Anomalies")](http://global-q.org/uploads/1/2/2/6/122679606/slides_replication_2021may.pdf) )
 
 > * Most anomalies fail to hold up to currently acceptable standards for 
 empirical finance.With microcaps mitigated via NYSE breakpoints and 
