--- a/_posts/2022-08-14-QFinance.md
+++ b/_posts/2022-08-14-QFinance.md
@@ -11,8 +11,10 @@ tag: Quantum Finance
 high-frequency statistical arbitrage 
 algorithm](https://iopscience.iop.org/article/10.1088/1367-2630/ac7f26/meta) .  
 > * [Future of Quantum Finance](https://sfmagazine.com/post-entry/january-2022-the-future-of-quantum-in-finance/) .
-> * 
-> * 
+> * [How quantum computing could change financial services](https://www.mckinsey.com/industries/financial-services/our-insights/how-quantum-computing-could-change-financial-services) .
+> * [Future Trends in Quantum Finance](https://www.researchgate.net/publication/337306005_Future_Trends_in_Quantum_Finance) . 
+> * []() .
+> * []() .
 
 #### Quantum computational quantitative trading: 
 high-frequency statistical arbitrage 
@@ -57,5 +59,4 @@ optimize portfolios, find arbitrage opportunities, and perform credit scoring</f
 ” 量子退火是一种计算方法，当问题可以呈现大量解决方案时，
 它提供了一种找到解决方案的方法。<font color=red>作者指出，量子退火器可用于优化投资组合、
 寻找套利机会和进行信用评分</font>。)
->
 >
