--- a/_posts/2022-08-12-HXZ.md
+++ b/_posts/2022-08-12-HXZ.md
@@ -1,15 +1,15 @@
 ---
 layout: post 
-title:  Notes for reading papers related to Hou, Xue, and Zhang. 
+title:  Notes for reading papers related to Hou Xue and Zhang. 
 description:    
 tag: reading notes of financial studying
 ---
 
 ### Abstract
 > Notes for reading papers 
-> * [Replicating Anomalies](https://doi.org/10.1093/rfs/hhy131) by Hou Xue Zhang.  
+> * [Replicating Anomalies (2020)](https://doi.org/10.1093/rfs/hhy131) by Hou Xue Zhang.  
 > * [Which Factors? (2019)](https://academic.oup.com/rof/article/23/1/1/5133564) by Hou Xue Zhang.
->
+> * [An Augmented q-Factor Model with Expected Growth (2021)](https://doi.org/10.1093/rof/rfaa004) by Hou Xue Zhang. 
 
 ### Replicating Anomalies
 
@@ -70,4 +70,38 @@ falling short of currently acceptable standards for empirical finance.
  同时指出收益异象可以按照基于个股收益率构建的多空投资组合获得稳健正向收益时间的续存期，
  分为长期收益异象（一般3-5年）和短期收益异象（不满1年）。
  (该段话来自于 [长短时间期限行为因子的定价效率研究——
- 来自中国A股市场的证据](https://doi.org/10.27006/d.cnki.gdbcu.2021.000011) )
+ 来自中国A股市场的证据](https://doi.org/10.27006/d.cnki.gdbcu.2021.000011) )。
+值得注意的是：<font color=red> 这段话似乎是有问题的，没有发现 [Hou Xue Zhang (2019)](
+https://academic.oup.com/rof/article/23/1/1/5133564) 在 A 股上的实证结果</font>
+经过查文献发现，<font color=red> 这段话指的是这篇文献</font>：[Finding Anomalies in China,
+KeWen Hou, Fang Qiao, Xiaoyuan Zhang (2021)](http://cfrc.pbcsf.tsinghua.edu.cn/ueditor/php/upload/file/20210611/1623389943123279.pdf?l=en&y=2022?l=en&y=2021) 
+和<font color=red>这篇文献</font> [Replicating Anomalies in China,Fang Qiao (2021)](https://www.cafr-sif.com/2019/2019selected/Replicating%20Anomalies%20in%20China.pdf).
+
+### An Augmented q-Factor Model with Expected Growth (2021)
+
+#### 概述
+
+> * ...
+
+### Summary
+
+#### 概述
+
+> * 中国<font color=red>A股市场存在的426个收益异象</font>，
+按照构建类别可以划分为代表<font color=red>估值水平</font>的收益异象，
+代表<font color=red>投资和融资水平</font>的收益异象，
+代表<font color=red>机构分析能力</font>的收益异象，
+代表<font color=red>风险特征</font>的收益异象，
+代表<font color=red>盈利能力</font>的收益异象，
+代表<font color=red>流动性</font>的收益异象，
+代表<font color=red>无形资产影响产生</font>的收益异象，
+代表<font color=red>交易摩擦</font>造成的收益异象，
+代表<font color=red>价格动量</font>的收益异象
+([Hou, et al, (2019)],[Hou, et al, (2020)],[Hou, et al, (2021)])。
+ (该段话来自于 [长短时间期限行为因子的定价效率研究——
+ 来自中国A股市场的证据](https://doi.org/10.27006/d.cnki.gdbcu.2021.000011) )。
+值得注意的是：<font color=red> 这段话似乎是有问题的，没有发现 [Hou Xue Zhang (2019)](
+https://academic.oup.com/rof/article/23/1/1/5133564) 在 A 股上的实证结果</font>。
+经过查文献发现，<font color=red> 这段话指的是这篇文献</font>：[Finding Anomalies in China,
+KeWen Hou, Fang Qiao, Xiaoyuan Zhang (2021)](http://cfrc.pbcsf.tsinghua.edu.cn/ueditor/php/upload/file/20210611/1623389943123279.pdf?l=en&y=2022?l=en&y=2021) 
+和<font color=red>这篇文献</font> [Replicating Anomalies in China,Fang Qiao (2021)](https://www.cafr-sif.com/2019/2019selected/Replicating%20Anomalies%20in%20China.pdf).
