--- a/_posts/2022-07-05-OSAP.md
+++ b/_posts/2022-07-05-OSAP.md
@@ -2,11 +2,15 @@
 layout: post 
 title: Open Source Asset Pricing in Chinese Stocks' Market
 description: Cross Sectional Asset Pricing
-tag: Quantitative Analysis
+tag: Github Project
 ---
 
 # Data
-We use CSMAR data set
+We use CSMAR data set, more details see the github project:  https://github.com/open-assetpricing-china/stock-predictors
 
 # Code
 > $ git clone https://github.com/open-assetpricing-china/stock-predictors.git
+
+# Document:
+> see the documentation on [ReadTheDoc](https://stock-predictors.readthedocs.io/en/latest/) .
+> > ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/OSAP_readthedocs.jpg) 
