--- a/_posts/2022-07-05-OSAP.md
+++ b/_posts/2022-07-05-OSAP.md
@@ -12,5 +12,5 @@ We use CSMAR data set, more details see the github project:  https://github.com/
 > $ git clone https://github.com/open-assetpricing-china/stock-predictors.git
 
 # Document:
-> see the documentation on [ReadTheDoc](https://stock-predictors.readthedocs.io/en/latest/) .
+> see the documentation on [ReadTheDocs](https://stock-predictors.readthedocs.io/en/latest/) .
 > > ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/OSAP_readthedocs.jpg) 
