--- a/_posts/2022-08-29-DR-Fin-0.md
+++ b/_posts/2022-08-29-DR-Fin-0.md
@@ -63,3 +63,9 @@ tag: Daily reading -> Finance
 一般实际问题中常用方法是方差最大化、正交旋转法</font>。
 > * 
 >
+
+#### LASSO
+
+> * [LASSO 方法参考知乎介绍](https://zhuanlan.zhihu.com/p/116869931). 
+>> * ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/DR-method-lasso-1.jpg)
+>> * ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/DR-method-lasso-2.jpg)  
