--- a/_posts/2022-08-29-DR-Fin-0.md
+++ b/_posts/2022-08-29-DR-Fin-0.md
@@ -69,3 +69,7 @@ tag: Daily reading -> Finance
 > * [LASSO 方法参考知乎介绍](https://zhuanlan.zhihu.com/p/116869931). 
 >> * ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/DR-method-lasso-1.jpg)
 >> * ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/DR-method-lasso-2.jpg)  
+>
+> * [矢量范数和矩阵范数, 来自知乎帖子](https://zhuanlan.zhihu.com/p/116869931)
+>> * ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/DR-method-lasso-3.jpg)
+>> * ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/DR-method-lasso-4.jpg)
