--- a/_posts/2022-08-29-DR-Fin-0.md
+++ b/_posts/2022-08-29-DR-Fin-0.md
@@ -73,3 +73,8 @@ tag: Daily reading -> Finance
 > * [矢量范数和矩阵范数, 来自知乎帖子](https://zhuanlan.zhihu.com/p/116869931)
 >> * ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/DR-method-lasso-3.jpg)
 >> * ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/DR-method-lasso-4.jpg)
+
+#### 统计检验
+
+> * [实证统计检验介绍参考B站](https://www.bilibili.com/video/BV1zV4y1x7zc?spm_id_from=333.337.search-card.all.click&vd_source=cf9aaab1f09e7e5b19cf23e0b4d3c771)
+> * ![](http://yangyuan16.github.io//images/posts/Quantitative_analysis/DR-method-F-test-1.jpg)
